samples/_failures_safe/1761563687_dd865a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_041edf74.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_041edf74.c:176:9: error: expected declaration or statement at end of input
  176 |         case TOKEN_EOF: return "EOF";
      |         ^~~~
./samples/SAFE/__tmp_041edf74.c:176:9: error: expected declaration or statement at end of input
